# myfpl-api

./: .gitignore  Dockerfile  Dockerfile.mysql  alembic.ini  db_helper.py  docker-compose.yml  main.py  notes.md  pyproject.toml  seed_db.py
.github/: docker-build.yml
.github/workflows/: docker-build.yml
fixtures/: fixtures.yaml  fpl_manager_sessions.yaml  gameweeks.yaml  player_fpl_seasons.yaml  players.yaml  seasons.yaml  team_fpl_seasons.yaml  teams.yaml
migrations/: env.py
migrations/versions/: 09419a214329_added_cookies_last_updated_field_to_fpl_.py  2e1bfb02ca22_modify_cookies_field_to_text_from_.py  45be14cc0e7f_renamed_fpl_manager_sessions_table_to_.py  57f9d6813d23_add_live_bonus_points_column_player_fi_.py  6bda774ca8e4_initial_migration.py  c01a7b7fd53b_created_fpl_manager_sessions_table.py  d15f449cf442_added_form_and_price_to_player_model.py  d7c0bd60d919_added_nullable_fields_to_fpl_manager_.py
src/: __init__.py  app.py  database.py  lifecycle.py  middleware.py  models.py  router.py  scheduler.py  settings.py
src/controllers/: manager.py
src/controllers/scraper/: endpoints.py  (+1 more)
src/crud/: __init__.py  fixtures.py  fpl_scraper_account.py  gameweek.py  player.py  season.py
src/routes/: __init__.py  fixtures.py  gameweek.py  leagues.py  manager.py  seasons.py
src/schemas/: __init__.py  fixtures.py  fpl_scraper_account.py  gameweek.py  leagues.py  manager.py  seasons.py
src/services/: __init__.py  get_fixture.py  get_fixtures.py  get_league.py  leagues.py  live_players.py  manager_leagues.py  manager_metadata.py  manager_transfers.py
(+10 files in other folders)
